[package]
name = "daipendency-extractor-typescript"
version = "1.0.0"
edition = "2021"
description = "Daipendency extractor for TypeScript libraries"
repository = "https://github.com/daipendency/daipendency-extractor-typescript"
homepage = "https://github.com/daipendency/daipendency-extractor-typescript"
documentation = "https://docs.rs/daipendency-extractor-typescript"
license = "MIT"
authors = ["Gus Narea"]

[dependencies]
daipendency-extractor = "1.0.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tree-sitter = "^0.24.6"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assertables = "9.5.0"
daipendency-testing = "1.1.0"
